Added script and template headers, footers + style

--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Budgeting Investments</title>
+    <link rel="stylesheet" href="./src/style.css">
+    <script src="./src/script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <template id="pageHeaders">
+        <header id="header">
+            <p>Name</p>
+            <nav>
+                <ul>
+                    <li><a href="./investment.html">Invest</a></li>
+                    <li><a href="./budget.htmk">Budget</a></li>
+                    <li><a href="./chat.html">Chat</a></li>
+                </ul>
+            </nav>
+        </header>
+    </template>
+
+    <div id="centerBox">
+        
+    </div>
+
+    <template id="pageFooters">
+        <footer id="footer">
+            <p>Name</p>
+            <nav>
+                <ul>
+                    <li><a href="./investment.html">Invest</a></li>
+                    <li><a href="./budget.htmk">Budget</a></li>
+                    <li><a href="./chat.html">Chat</a></li>
+                </ul>
+            </nav>
+        </footer>
+    </template>
 </body>
 </html>
