Added more assets and added most CSS.

--- a/investments/investment.html
+++ b/investments/investment.html
@@ -29,7 +29,7 @@
     </template>
 
     <div id="centerBox">
-        <img src="../assets/InvestSmartBlack.png" alt="Smart Invest Logo">
+        <img id="InvestSmartLogo" src="../assets/InvestSmartBlack.png" alt="Smart Invest Logo">
     
         <div class="grid-container">
             <div class="investment-item">
