Graph displays investment growth over time.

--- a/investments/investment.html
+++ b/investments/investment.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&family=Poppins&display=swap" rel="stylesheet">
 </head>
-    <script src="investment.js"></script>
+    <script defer src="investment.js"></script>
 </head>
 <body>
     <template id="pageHeaders">
