Added new header and footer to most files.

--- a/investments/investment.html
+++ b/investments/investment.html
@@ -22,9 +22,9 @@
             <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
             <nav>
                 <ul>
-                    <li><a href="./investment.html">InvestSmart</a></li>
-                    <li><a href="./budget.htmk">Budget</a></li>
-                    <li><a href="./chat.html">Chat</a></li>
+                    <li><a href="../investments/investment.html">InvestSmart</a></li>
+                    <li><a href="../budget/budget.html">BudgetBoss</a></li>
+                    <li><a href="../about/about-us.html">About Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -77,12 +77,10 @@
 
     <template id="pageFooters">
         <footer id="footer">
-            <p>Name</p>
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
             <nav>
                 <ul>
-                    <li><a href="./investment.html">Invest</a></li>
-                    <li><a href="./budget.htmk">Budget</a></li>
-                    <li><a href="./chat.html">Chat</a></li>
+                    <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </nav>
         </footer>
