--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <template id="pageHeaders">
         <header id="header">
-            <p>Name</p>
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
             <nav>
                 <ul>
-                    <li><a href="./investment.html">Invest</a></li>
-                    <li><a href="./budget.htmk">Budget</a></li>
-                    <li><a href="./chat.html">Chat</a></li>
+                    <li><a href="../investments/investment.html">InvestSmart</a></li>
+                    <li><a href="../budget/budget.html">BudgetBoss</a></li>
+                    <li><a href="../about/about-us.html">About Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -29,12 +29,10 @@
 
     <template id="pageFooters">
         <footer id="footer">
-            <p>Name</p>
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
             <nav>
                 <ul>
-                    <li><a href="./investment.html">Invest</a></li>
-                    <li><a href="./budget.htmk">Budget</a></li>
-                    <li><a href="./chat.html">Chat</a></li>
+                    <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </nav>
         </footer>
