Added chatbot to main pages.

--- a/index.html
+++ b/index.html
@@ -37,5 +37,27 @@
             </nav>
         </footer>
     </template>
+
+    <!--ChatBot-->
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+    <script>
+    window.botpressWebChat.init({
+        "composerPlaceholder": "Learn about finances!",
+        "botConversationDescription": "Made w/ love by hiJACkers team <3",
+        "botId": "82f0e1e8-82d7-46cf-b2a7-bcc7d1ececa7",
+        "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
+        "messagingUrl": "https://messaging.botpress.cloud",
+        "clientId": "82f0e1e8-82d7-46cf-b2a7-bcc7d1ececa7",
+        "webhookId": "d830dfc2-e814-4960-9b92-503a28692905",
+        "lazySocket": true,
+        "themeName": "prism",
+        "frontendVersion": "v1",
+        "showPoweredBy": true,
+        "theme": "prism",
+        "themeColor": "#2563eb",
+        "botName": "CapitalCoach",
+        "div.bpw-bubble-content": "#2563eb"
+    });
+    </script></body>
 </body>
 </html>
