--- a/index.html
+++ b/index.html
@@ -5,37 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budgeting Investments</title>
     <link rel="stylesheet" href="./src/style.css">
-    <script src="./src/script.js" defer></script>
+    <script src="https://www.w3schools.com/lib/w3data.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <template id="pageHeaders">
-        <header id="header">
-            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-            <nav>
-                <ul>
-                    <li><a href="../investments/investment.html">InvestSmart</a></li>
-                    <li><a href="../budget/budget.html">BudgetBoss</a></li>
-                    <li><a href="../about/about-us.html">About Us</a></li>
-                </ul>
-            </nav>
-        </header>
-    </template>
+
+    <div w3-include-html="header.html"></div>
+        
 
     <div id="centerBox">
-        
+        <p>this may or may not be a test</p>
     </div>
 
-    <template id="pageFooters">
-        <footer id="footer">
-            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-            <nav>
-                <ul>
-                    <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
-                </ul>
-            </nav>
-        </footer>
-    </template>
+    <div w3-include-html="footer.html"></div> 
+    <script>w3IncludeHTML();</script>  
 </body>
 </html>
