fixed placement of footer on index

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <p>this may or may not be a test</p>
     </div>
 
-    <div w3-include-html="footer.html"></div> 
-    <script>w3IncludeHTML();</script>  
+
 
     <!--ChatBot-->
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
@@ -41,6 +40,8 @@
         "botName": "CapitalCoach",
         "div.bpw-bubble-content": "#2563eb"
     });
-    </script></body>
+    </script>
+    <div w3-include-html="footer.html"></div> 
+    <script>w3IncludeHTML();</script>  
 </body>
 </html>
