fixed most headers and footers

--- a/about/about-us.html
+++ b/about/about-us.html
@@ -4,31 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://www.w3schools.com/lib/w3data.js"></script>
+    <link rel="stylesheet" href="about-us.css">
+    <link rel="stylesheet" href="../src/style.css">
     <title>About Us</title>
 </head>
 <body>
-    <div w3-include-html="content.html" id="pageHeaders">
-        <header id="header">
-            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-            <nav>
-                <ul>
-                    <li><a href="../investments/investment.html">InvestSmart</a></li>
-                    <li><a href="../budget/budget.html">BudgetBoss</a></li>
-                    <li><a href="../about/about-us.html">About Us</a></li>
-                </ul>
-            </nav>
-        </header>
-    </div>
+    <div w3-include-html="../header.html"></div>
 
-    <div w3-include-html="content.html" id="pageHeaders">
-        <footer id="footer">
-            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-            <nav>
-                <ul>
-                    <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
-                </ul>
-            </nav>
-        </footer>
+    <div id="centerBox">
+        <h1>About Us</h1>
     </div>
+    <div w3-include-html="../footer.html"></div> 
+    <script>w3IncludeHTML();</script>
+
 </body>
 </html>
