--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <footer id="footer">
-        <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        <a href="index.html">
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        </a>
         <nav>
             <ul>
                 <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
