--- a/header.html
+++ b/header.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header id="header">
-        <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-        <nav>
+        <a href="index.html">
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        </a>        <nav>
             <ul>
                 <li><a href="../investments/investment.html">InvestSmart</a></li>
                 <li><a href="../budget/budget.html">BudgetBoss</a></li>
