--- a/budget/budget.html
+++ b/budget/budget.html
@@ -15,18 +15,8 @@
 </head>
 
 <body>
-    <template id="pageHeaders">
-        <header id="header">
-            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-            <nav>
-                <ul>
-                    <li><a href="../investments/investment.html">InvestSmart</a></li>
-                    <li><a href="../budget/budget.html">BudgetBoss</a></li>
-                    <li><a href="../about/about-us.html">About Us</a></li>
-                </ul>
-            </nav>
-        </header>
-    </template>
+    <div w3-include-html="header.html"></div>
+
 
     <!-- <div id="centerBox"> -->
         <!-- <h1>Budget Pal</h1> -->
@@ -98,18 +88,6 @@
             <div id="progress-bar"></div>
           </div>
 
-    <!-- </div> -->
-    <template id="pageFooters">
-        <footer id="footer">
-            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-            <nav>
-                <ul>
-                    <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
-                </ul>
-            </nav>
-        </footer>
-    </template>
-
     <!--ChatBot-->
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
     <script>
@@ -118,7 +96,7 @@
         "botConversationDescription": "Made w/ love by hiJACkers team <3",
         "botId": "82f0e1e8-82d7-46cf-b2a7-bcc7d1ececa7",
         "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
-        "messagingUrl": "https://messaging.botpress.cloud/",
+        "messagingUrl": "https://messaging.botpress.cloud",
         "clientId": "82f0e1e8-82d7-46cf-b2a7-bcc7d1ececa7",
         "webhookId": "d830dfc2-e814-4960-9b92-503a28692905",
         "lazySocket": true,
@@ -131,5 +109,7 @@
         "div.bpw-bubble-content": "#2563eb"
     });
     </script>
+    <div w3-include-html="footer.html"></div> 
+    <script>w3IncludeHTML();</script>  
 </body>
 </html>
