Fixed headers and footers AGAIN AHHHHHHHHHHH

--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+            <img src="./assets/SilverLogo.png" alt="Silver Capital Coach Logo">
         </a>        <nav>
             <ul>
                 <li><a href="../investments/investment.html">InvestSmart</a></li>
