--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budgeting Investments</title>
     <link rel="stylesheet" href="./src/style.css">
-    <script src="https://www.w3schools.com/lib/w3data.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <div w3-include-html="header.html"></div>
-        
+    <header id="header">
+        <a href="../index.html">
+            <img src="./assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        </a>        <nav>
+            <ul>
+                <li><a href="./investments/investment.html">InvestSmart</a></li>
+                <li><a href="./budget/budget.html">BudgetBoss</a></li>
+                <li><a href="./about/about-us.html">About Us</a></li>
+            </ul>
+        </nav>
+    </header>        
 
     <div id="centerBox">
         <p>this may or may not be a test</p>
@@ -41,7 +49,15 @@
         "div.bpw-bubble-content": "#2563eb"
     });
     </script>
-    <div w3-include-html="footer.html"></div> 
-    <script>w3IncludeHTML();</script>  
+    <footer id="footer">
+        <a href="../index.html">
+            <img src="./assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        </a>
+        <nav>
+            <ul>
+                <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
+            </ul>
+        </nav>
+    </footer> 
 </body>
 </html>
