--- a/privacy/privacy-policy.html
+++ b/privacy/privacy-policy.html
@@ -17,8 +17,17 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div w3-include-html="../header.html"></div>
-
+    <header id="header">
+        <a href="../index.html">
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        </a>        <nav>
+            <ul>
+                <li><a href="../investments/investment.html">InvestSmart</a></li>
+                <li><a href="../budget/budget.html">BudgetBoss</a></li>
+                <li><a href="../about/about-us.html">About Us</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div id="centerBox">
         <h1>Privacy Policy for Capital Coach</h1>
@@ -57,8 +66,16 @@
 
     </div>
 
-    <div w3-include-html="../footer.html"></div> 
-    <script>w3IncludeHTML();</script>
+    <footer id="footer">
+        <a href="../index.html">
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        </a>
+        <nav>
+            <ul>
+                <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
+            </ul>
+        </nav>
+    </footer>
 
     <!--ChatBot-->
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
