--- a/about/about-us.html
+++ b/about/about-us.html
@@ -9,13 +9,37 @@
     <title>About Us</title>
 </head>
 <body>
-    <div w3-include-html="../header.html"></div>
-
+    <header id="header">
+        <a href="../index.html">
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        </a>        <nav>
+            <ul>
+                <li><a href="../investments/investment.html">InvestSmart</a></li>
+                <li><a href="../budget/budget.html">BudgetBoss</a></li>
+                <li><a href="../about/about-us.html">About Us</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="centerBox">
         <h1>About Us</h1>
+        <div id="TJ">
+            <img src="../assets/TJ_Picture.jpg">
+        </div> 
+        <div id="Zach"></div>
+        <div id="Dylan"></div>
+        <div id="Lucas"></div>
     </div>
-    <div w3-include-html="../footer.html"></div> 
-    <script>w3IncludeHTML();</script>
+    </div>
+    <footer id="footer">
+        <a href="../index.html">
+            <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
+        </a>
+        <nav>
+            <ul>
+                <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 </html>
