--- a/budget/budget.html
+++ b/budget/budget.html
@@ -15,18 +15,17 @@
 </head>
 
 <body>
-    <template id="pageHeaders">
-        <header id="header">
+    <header id="header">
+        <a href="../index.html">
             <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-            <nav>
-                <ul>
-                    <li><a href="../investments/investment.html">InvestSmart</a></li>
-                    <li><a href="../budget/budget.html">BudgetBoss</a></li>
-                    <li><a href="../about/about-us.html">About Us</a></li>
-                </ul>
-            </nav>
-        </header>
-    </template>
+        </a>        <nav>
+            <ul>
+                <li><a href="../investments/investment.html">InvestSmart</a></li>
+                <li><a href="../budget/budget.html">BudgetBoss</a></li>
+                <li><a href="../about/about-us.html">About Us</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- <div id="centerBox"> -->
         <!-- <h1>Budget Pal</h1> -->
@@ -99,16 +98,16 @@
           </div>
 
     <!-- </div> -->
-    <template id="pageFooters">
-        <footer id="footer">
+    <footer id="footer">
+        <a href="../index.html">
             <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-            <nav>
-                <ul>
-                    <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
-                </ul>
-            </nav>
-        </footer>
-    </template>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="../privacy/privacy-policy.html">Privacy Policy</a></li>
+            </ul>
+        </nav>
+    </footer> 
 
     <!--ChatBot-->
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
