--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <footer id="footer">
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
         </a>
         <nav>
