--- a/about/about-us.html
+++ b/about/about-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,13 @@
     <link rel="stylesheet" href="../src/style.css">
     <title>About Us</title>
 </head>
+
 <body>
     <header id="header">
         <a href="../index.html">
             <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-        </a>        <nav>
+        </a>
+        <nav>
             <ul>
                 <li><a href="../investments/investment.html">InvestSmart</a></li>
                 <li><a href="../budget/budget.html">BudgetBoss</a></li>
@@ -20,16 +23,52 @@
             </ul>
         </nav>
     </header>
+
     <div id="centerBox">
         <h1>About Us</h1>
-        <div id="TJ">
-            <img src="../assets/TJ_Picture.jpg">
-        </div> 
-        <div id="Zach"></div>
-        <div id="Dylan"></div>
-        <div id="Lucas"></div>
+        <div id="info">
+            <div id="TJ">
+                <img id="TJImg" src="../assets/TJ_Picture.jpg" alt="Picture of TJ">
+                <h3>TJ Klint</h3>
+                <a href="https://github.com/tjklint">
+                    <img id="geethab" src="../assets/github-mark.png" alt="Github logo">
+                </a>
+                <a href="https://www.linkedin.com/in/timothy-klint/">
+                    <img id="linkedin" src="../assets/LinkedIn_icon_circle.svg.png" alt="LinkedIn logo">
+                </a>
+            </div>
+            <div id="Zach"><img id="ZachImg" src="../assets/Zach_Picture.jpg">
+                <h3>Zach Dube</h3>
+                <a href="https://github.com/CompSciZach">
+                    <img id="geethab" src="../assets/github-mark.png" alt="Github logo">
+                </a>
+                <a href="https://www.linkedin.com/in/zachary-dube/">
+                    <img id="linkedin" src="../assets/LinkedIn_icon_circle.svg.png" alt="LinkedIn logo">
+                </a>
+            </div>
+        </div>
+        <div id="info">
+            <div id="Dylan"><img id="DylanImg" src="../assets/TJ_Picture.jpg">
+                <h3>Dylan Savelson</h3>
+                <a href="https://github.com/DylanSavelson">
+                    <img id="geethab" src="../assets/github-mark.png" alt="Github logo">
+                </a>
+                <a href="https://www.linkedin.com/in/dylan-savelson-83714628b/">
+                    <img id="linkedin" src="../assets/LinkedIn_icon_circle.svg.png" alt="LinkedIn logo">
+                </a>
+            </div>
+            <div id="Lucas"><img id="LucasImg" src="../assets/Lucas_Picture.jpg">
+                <h3>Lucas Lalumière</h3>
+                <a href="https://github.com/Shlucus">
+                    <img id="geethab" src="../assets/github-mark.png" alt="Github logo">
+                </a>
+                <a href="https://www.linkedin.com/in/lucas-lalumi%C3%A8re/">
+                    <img id="linkedin" src="../assets/LinkedIn_icon_circle.svg.png" alt="LinkedIn logo">
+                </a>
+            </div>
+        </div>
     </div>
-    </div>
+
     <footer id="footer">
         <a href="../index.html">
             <img src="../assets/SilverLogo.png" alt="Silver Capital Coach Logo">
@@ -42,4 +81,5 @@
     </footer>
 
 </body>
+
 </html>
