--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header id="header">
         <a href="../index.html">
             <img src="./assets/SilverLogo.png" alt="Silver Capital Coach Logo">
-        </a>        <nav>
+        </a>        
+        <nav>
             <ul>
                 <li><a href="./investments/investment.html">InvestSmart</a></li>
                 <li><a href="./budget/budget.html">BudgetBoss</a></li>
@@ -22,8 +23,8 @@
         </nav>
     </header>        
 
-    <div id="centerBox">
-        <p>this may or may not be a test</p>
+    <div id="centerBox" style="text-align: center;">
+        <h1>READY TO TAKE CONTROL OF YOUR FINANCES?</h1>
     </div>
 
 
