Added fonts to about us.

--- a/about/about-us.html
+++ b/about/about-us.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="about-us.css">
     <link rel="stylesheet" href="../src/style.css">
     <title>About Us</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&family=Poppins&display=swap"
 </head>
 
 <body>
