--- a/privacy/privacy-policy.html
+++ b/privacy/privacy-policy.html
@@ -62,7 +62,7 @@
     <p>We may update this policy and recommend users review it regularly.</p>
 
     <h2>Contact Us</h2>
-    <p>For questions about this policy, contact us at: [Insert Contact Information].</p>
+    <p>For questions about this policy, contact us at: timothyjklint@gmail.com.</p>
 
     </div>
 
