--- a/about/about-us.html
+++ b/about/about-us.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div id="info">
-            <div id="Dylan"><img id="DylanImg" src="../assets/TJ_Picture.jpg">
+            <div id="Dylan"><img id="DylanImg" src="../assets/dylan pciture.png">
                 <h3>Dylan Savelson</h3>
                 <a href="https://github.com/DylanSavelson">
                     <img id="geethab" src="../assets/github-mark.png" alt="Github logo">
