--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
         <h1>READY TO TAKE CONTROL OF YOUR FINANCES?</h1>
     </div>
 
+    <hr style="width:50%;text-align:center;">
+    <h1 style="font-size:3vw;">OUR FEATURES</h1>
+    <div style="display:flex; gap:10vw;">
+        <div id="centerBox" style="text-align: center;">
+            <img src="./assets/capital coach.png" style="border-bottom: 5px solid black; height:15vw; width:15vw;">     
+            <h1>text</h1>   
+        </div>
+        <div id="centerBox" style="text-align: center;">
+            <img src="./assets/BUDGETBOSSIMG.png" style="border-bottom: 5px solid black; height:15vw; width:15vw;">
+            <h1>text</h1>
+        </div>
+        <div id="centerBox" style="text-align: center;">
+            <img src="./assets/chatbot.png" style=" border-bottom: 5px solid black; height:15vw; width:15vw;">
+            <h1>text</h1>
+        </div>
+    </div>
+
 
 
     <!--ChatBot-->
