Added descriptions for features.

--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 
     <hr style="width:50%;text-align:center;">
     <h1 style="font-size:3vw;">OUR FEATURES</h1>
-    <div style="display:flex; gap:10vw;">
+    <div id="Features" style="display:flex; gap:10vw;">
         <div id="centerBox" style="text-align: center;">
             <img src="./assets/capital coach.png" style="border-bottom: 5px solid black; height:15vw; width:15vw;">     
-            <h1>text</h1>   
+            <h4>InvestSmart makes investment planning straightforward and accessible.</h4>   
         </div>
         <div id="centerBox" style="text-align: center;">
             <img src="./assets/BUDGETBOSSIMG.png" style="border-bottom: 5px solid black; height:15vw; width:15vw;">
-            <h1>text</h1>
+            <h4>Budgeting is made easy with BudgetBoss.</h4>
         </div>
-        <div id="centerBox" style="text-align: center;">
+        <div id="centerBox" style="text-align: center; ">
             <img src="./assets/chatbot.png" style=" border-bottom: 5px solid black; height:15vw; width:15vw;">
-            <h1>text</h1>
+            <h4>Powered by Botpress, the CapitalCoach Chatbot is your go-to source for any queries related to our site.</h1>
         </div>
     </div>
 
