Added website description.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     </header>        
 
     <div id="centerBox" style="text-align: center;">
-        <h1>READY TO TAKE CONTROL OF YOUR FINANCES?</h1>
+        <h1>Welcome to **Capital Coach**!</h1> 
+        <p>our innovative financial tool crafted with dedication at ConUHacks VIII. 
+            This project is a collaborative effort of our team comprising of Timothy (TJ) Klint, Zachary Dube, Lucas 
+            Lalumiere, and Dylan Savelson. Capital Coach is designed to empower individuals with smart financial 
+            planning tools, integrating simplicity with effectiveness.</p>
+        <img src="./assets/SilverLogoNoText.png" alt="Silver Capital Coach Logo no text">
     </div>
 
     <hr style="width:50%;text-align:center;">
