i made index look a teeny bit nicer

--- a/index.html
+++ b/index.html
@@ -23,28 +23,30 @@
         </nav>
     </header>        
 
-    <div id="centerBox" style="text-align: center;">
-        <h1>Welcome to **Capital Coach**!</h1> 
-        <p>our innovative financial tool crafted with dedication at ConUHacks VIII. 
-            This project is a collaborative effort of our team comprising of Timothy (TJ) Klint, Zachary Dube, Lucas 
-            Lalumiere, and Dylan Savelson. Capital Coach is designed to empower individuals with smart financial 
-            planning tools, integrating simplicity with effectiveness.</p>
-        <img src="./assets/SilverLogoNoText.png" alt="Silver Capital Coach Logo no text">
+    <div id="centerBox" style="display:flex; text-align: left; padding:2%;">
+        <div style="display: flex; flex-direction: column; padding-left: 1vw;">
+            <h1>Welcome to **Capital Coach**!</h1> 
+            <p>Our innovative financial tool crafted with dedication at ConUHacks VIII. 
+                This project is a collaborative effort of our team comprising of Timothy (TJ) Klint, Zachary Dube, Lucas 
+                Lalumiere, and Dylan Savelson. Capital Coach is designed to empower individuals with smart financial 
+                planning tools, integrating simplicity with effectiveness.</p>
+        </div>
+        <img src="./assets/SilverLogoNoText.png" alt="Silver Capital Coach Logo no text" style="height: 35vh;">
     </div>
 
     <hr style="width:50%;text-align:center;">
-    <h1 style="font-size:3vw;">OUR FEATURES</h1>
-    <div id="Features" style="display:flex; gap:10vw;">
+    <h1 style="font-size:3vw; margin-bottom: 0;">OUR FEATURES</h1>
+    <div id="Features" style="display:flex; gap:3vw;">
         <div id="centerBox" style="text-align: center;">
-            <img src="./assets/capital coach.png" style="border-bottom: 5px solid black; height:15vw; width:15vw;">     
+            <img src="./assets/capital coach.png" style="border-bottom: 5px solid black; height:25vw; width:100%;">     
             <h4>InvestSmart makes investment planning straightforward and accessible.</h4>   
         </div>
         <div id="centerBox" style="text-align: center;">
-            <img src="./assets/BUDGETBOSSIMG.png" style="border-bottom: 5px solid black; height:15vw; width:15vw;">
+            <img src="./assets/BUDGETBOSSIMG.png" style="border-bottom: 5px solid black; height:25vw; width:100%;">
             <h4>Budgeting is made easy with BudgetBoss.</h4>
         </div>
         <div id="centerBox" style="text-align: center; ">
-            <img src="./assets/chatbot.png" style=" border-bottom: 5px solid black; height:15vw; width:15vw;">
+            <img src="./assets/chatbot.png" style=" border-bottom: 5px solid black; height:25vw; width:100%;">
             <h4>Powered by Botpress, the CapitalCoach Chatbot is your go-to source for any queries related to our site.</h1>
         </div>
     </div>
