--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div id="centerBox" style="display:flex; text-align: left; padding:2%;">
         <div style="display: flex; flex-direction: column; padding-left: 1vw;">
-            <h1>Welcome to **Capital Coach**!</h1> 
+            <h1>Welcome to Capital Coach!</h1> 
             <p>Our innovative financial tool crafted with dedication at ConUHacks VIII. 
                 This project is a collaborative effort of our team comprising of Timothy (TJ) Klint, Zachary Dube, Lucas 
                 Lalumiere, and Dylan Savelson. Capital Coach is designed to empower individuals with smart financial 
